--- a/Backend/.env
+++ b/Backend/.env
@@ -9,3 +9,5 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-8ulob%40todo-app-a9cf8.iam.gserviceaccount.com
 FIREBASE_CLIENT_universe_domain=googleapis.com
+
+MONGO_URI=mongodb+srv://todo:todo123@cluster0.drqortc.mongodb.net/todo-app?retryWrites=true&w=majority
